[package]
name = "rubee"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
bytes = "1.2.1"
clap = { version = "4.0.23", features = ["derive"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-serial = "5.4.4"
